# bt-ddos-shield

./: .dockerignore  .gitignore  README.md  chat-022c6026-39a0-4b0f-bc40-e34cd29e6383.txt
.github/workflows/: publish.yml
bt_ddos_shield_client/: .gitignore  README.md  noxfile.py  pyproject.toml
bt_ddos_shield_client/bt_ddos_shield_client/: README.md  __init__.py  certificate_reconciliation.py  certificates.py  client.py  contacts.py  ed25519_ecies.py  encryption.py  internal.py  manifest.py  shield_metagraph.py  testing.py  types.py
bt_ddos_shield_client/bt_ddos_shield_client/shielded_turbobt/: __init__.py  contacts.py  neuron_mutator.py  shielded_bittensor.py
bt_ddos_shield_client/tests/: conftest.py  fakes.py  test_certificates.py  test_ed25519_ecies.py  test_encryption.py  test_manifest_encryption_contract.py  test_package_imports.py  test_shield_metagraph.py  test_testing_helpers.py
bt_ddos_shield_client/tests/contacts/: conftest.py  local_subtensor.py
bt_ddos_shield_client/tests/fixtures/certs/: README.md  validator_b.pem
bt_ddos_shield_client/tests/shielded_turbobt/: test_shielded_bittensor.py  test_shielded_neuron_mutator.py
bt_ddos_shield_client/tests/test_utils/: conftest.py  test_testing_helpers.py
bt_ddos_shield_client/tests/test_utils/example_validator_code/: validator.py
docs/: engineering-standards.md
docs/superpowers/plans/: 2026-03-28-manual-pulumi-preview.md  2026-03-28-server-shield-productization.md  2026-03-29-pulumi-backend-stack-config-plan.md  2026-03-30-chain-reader-validator-domain-reconciliation.md  2026-03-30-container-pulumi-helper.md  2026-03-30-manifest-production.md  2026-03-30-state-rename-plan.md  2026-03-31-chain-reader-writer-engineering-standards.md  2026-03-31-real-contact-integration-tests.md  2026-03-31-shield-client-subtensor-refactor.md  2026-03-31-shield-contact-mocks-and-public-api-tests.md
docs/superpowers/specs/: 2026-03-28-server-shield-productization-design.md  2026-03-29-provider-scoped-pulumi-config-design.md  2026-03-29-pulumi-backend-stack-config-design.md  2026-03-30-chain-reader-validator-domain-reconciliation-design.md  2026-03-30-manifest-production-design.md  2026-03-30-state-rename-design.md  2026-03-31-chain-reader-writer-engineering-standards-design.md  2026-03-31-real-contact-integration-tests-design.md  2026-03-31-shield-client-subtensor-refactor-design.md  2026-03-31-shield-contact-mocks-and-public-api-tests-design.md  2026-04-01-chain-reader-manifest-domain-port-design.md  2026-04-01-shielded-subnet-clone-and-reconciler-design.md  2026-04-02-turbobt-neuron-mutator-design.md  2026-05-27-client-ed25519-ecies-migration-design.md
manual_tests/: .env.template  .gitignore  README.md  continously_run_shield_client.py  continously_run_turbobt_shield.py  local_subtensor.docker-compose.yml  long_running_test.docker.compose.yml  mtest.py  pulumi_destroy.sh  pyproject.toml  read_metagraph.py  register_miner_and_vali.sh  run_chain_reader.sh  run_chain_writer.sh  run_pulumi.sh  run_shield_client.py
server_shield/: Dockerfile  Pulumi.yaml  __main__.py  domains.txt  hosted_zone_domain.txt  nlb_ip.txt  pyproject.toml
server_shield/docker/: entrypoint.sh  run_component.sh  shield-pulumi
server_shield/pulumi_project/: Pulumi.dev.yaml  __main__.py
server_shield/src/server_shield/: __init__.py  subtensor_contact.py
server_shield/src/server_shield/chain_reader/: __init__.py  chain.py  cli.py  manifest.py  reconciliation.py
server_shield/src/server_shield/chain_writer/: __init__.py  cli.py
server_shield/src/server_shield/pulumi_runner/: __init__.py  cli.py  program.py  shell.py
server_shield/src/server_shield/shared/: __init__.py  config.py  runtime.py  runtime_report.py  sentry.py  state.py  state_store.py  supervisor.py
server_shield/src/server_shield/shared/state_files/: axon_public_ip.example.json  desired_domains.example.json  hosted_zone_domain.example.json  manifest.example.json  nlb_ip.example.json  root_domain.example.json
server_shield/tests/: conftest.py
server_shield/tests/chain_reader/: test_cli.py
server_shield/tests/chain_writer/: test_cli.py
server_shield/tests/contacts/: conftest.py  local_subtensor.py  test_subtensor_contact.py
server_shield/tests/docker/: test_run_component.py
server_shield/tests/pulumi_runner/: test_cli.py  test_program.py
server_shield/tests/shared/: test_config.py  test_runtime.py  test_state_store.py
