[project]
name = "bt_ddos_shield_client"
requires-python = ">=3.11,<3.15"
dynamic = [
    "version",
]
readme = "README.md"
dependencies = [
    "bittensor~=9.0",
    "bittensor-wallet~=4.0",
    "cryptography~=43.0",
    "pycryptodome>=3.21.0,<4",
    "aiohttp>=3.12.13,<4",
]

[project.optional-dependencies]
turbobt = [
    "turbobt~=0.3.1; python_version < '3.14'",
]

[dependency-groups]
test = [
    "pytest~=8.3.4",
    "pytest-asyncio~=1.0.0",
    "aioresponses~=0.7.8",
    "freezegun~=1.5.1",
    "paramiko~=3.5",
    "testcontainers~=4.13.2",
    "bt_ddos_shield_client[turbobt]",
]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8,<9"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "bt_ddos_shield_client",
    "bt_ddos_shield_client.shielded_turbobt",
]

[tool.setuptools_scm]
root = ".."
tag_regex = "^(?:draft/)?v(?P<version>.+)$"

[tool.pytest.ini_options]
addopts = '-s -m "not subtensor_integration"'
asyncio_default_fixture_loop_scope = "function"
markers = [
    "subtensor_integration: real local-subtensor integration tests for contact implementations",
]
testpaths = [
    "tests",
]
