[project]
name = "manual-tests"
version = "0.1.0"
description = "Manual tests for bt ddos shield"
#requires-python = "==3.11.*"
requires-python = "==3.12.*"
#requires-python = "==3.13.*"
#requires-python = "==3.14.*"
dependencies = [
    "bittensor-cli",
    "bittensor",
    "dotenv",
    "bt_ddos_shield_client[turbobt]",
]

[tool.uv.sources]
bt_ddos_shield_client = { path = "../bt_ddos_shield_client", editable = true }