[project]
name = "server-shield"
version = "0.1.0"
description = "Server-side BT DDoS Shield components"
requires-python = ">=3.14"
dependencies = [
    "pulumi>=3,<4",
    "pulumi-aws>=7,<8",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "sentry-sdk>=2,<3",
]

[project.scripts]
server-shield-pulumi = "server_shield.pulumi_runner.cli:main"
server-shield-chain-reader = "server_shield.chain_reader.cli:main"
server-shield-chain-writer = "server_shield.chain_writer.cli:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_shield"]
