[project]
name = "server-shield"
version = "0.1.0"
description = "Server-side BT DDoS Shield components"
requires-python = ">=3.14"
dependencies = [
    "bittensor>=9.12.2,<10",
    "pulumi>=3.228.0,<4",
    "pulumi-aws>=7.23.0,<8",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.11.0,<3",
    "sentry-sdk>=2.27.0,<3",
]

[project.scripts]
server-shield-pulumi = "server_shield.pulumi_runner.cli:main"
server-shield-pulumi-shell = "server_shield.pulumi_runner.shell:main"
server-shield-chain-reader = "server_shield.chain_reader.cli:main"
server-shield-chain-writer = "server_shield.chain_writer.cli:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "testcontainers>=4.13,<5",
]

[tool.pytest.ini_options]
markers = [
    "subtensor_integration: tests that require a disposable local subtensor environment",
]
addopts = "-m 'not subtensor_integration'"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server_shield"]
